Add functional to edit page

--- a/frontend/src/components/Pages/Edit/Edit.module.css
+++ b/frontend/src/components/Pages/Edit/Edit.module.css
@@ -136,6 +136,10 @@
     border: none;
 }
 
+.control_button_active {
+    box-shadow: 0 0 14px 12px #ccc;
+}
+
 .control_button:hover {
     cursor: pointer;
 }
