--- a/frontend/src/components/Pages/Edit/Edit.module.css
+++ b/frontend/src/components/Pages/Edit/Edit.module.css
@@ -6,12 +6,13 @@
 }
 
 .header {
-    background-color: #D9D9D9;
+    background: linear-gradient(180deg, rgba(128, 171, 255, 0.34) 0%, rgba(128, 171, 255, 0) 155.44%);
     padding-top: 140px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 120px;
+    padding-bottom: 50px;
 }
 
 .header_text_block {
@@ -34,6 +35,10 @@
     letter-spacing: 0;
 }
 
+.header_img {
+    height: 450px;
+}
+
 .edit {
     display: flex;
     gap: 32px;
@@ -51,7 +56,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 64px;
+    gap: 256px;
 }
 
 .dynamic_arrow_endpoint {
@@ -116,6 +121,33 @@
 .struct_input:focus, .struct_input:active {
     border: none;
     outline: none;
+}
+
+.popup_trigger_invisible {
+    visibility: hidden;
+}
+
+.popup_trigger {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border: none;
+}
+
+.popup_trigger:hover {
+    cursor: pointer;
+}
+
+.split_popup_trigger {
+    margin-left: -120px;
+    margin-top: -20px;
+    background-color: lightgreen;
+}
+
+.merge_popup_trigger {
+    margin-left: 150px;
+    margin-top: -20px;
+    background-color: lightblue;
 }
 
 .control_panel {
@@ -293,8 +325,8 @@
 .apply_button {
     width: 310px;
     height: 75px;
-    background: #EA5B5B;
-    border-radius: 20px;
+    background: #EF3124;
+    border-radius: 12px;
     color: #FFFFFF;
     text-transform: uppercase;
 
