--- a/frontend/src/components/Pages/Upload/Upload.module.css
+++ b/frontend/src/components/Pages/Upload/Upload.module.css
@@ -8,8 +8,14 @@
 
 .upload {
     display: flex;
-    width: 1000px;
-    gap: 32px;
+    width: 1300px;
+    gap: 64px;
+    margin-top: 64px;
+    margin-bottom: 64px;
+}
+
+.textblock {
+    width: 40%;
 }
 
 .header {
@@ -35,13 +41,15 @@
     margin-top: 16px;
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 12px;
 }
 
-.file_upload_block {
+.file_button_container {
     display: flex;
     gap: 18px;
     align-items: center;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 
 .file_input {
@@ -53,28 +61,26 @@
     justify-content: center;
     align-items: center;
 
-    width: 310px;
-    height: 75px;
-    background: #EA5B5B;
-    border-radius: 20px;
+    padding: 16px;
+
+    background: #6C6C6C;
+    border-radius: 12px;
     color: #FFFFFF;
-    text-transform: uppercase;
 
     font-size: 24px;
     font-weight: 700;
     line-height: 34px;
     letter-spacing: 0.015em;
-
 }
 
 .file_input_description {
-    width: 275px;
-    font-family: Segoe UI, serif;
-    font-size: 20px;
-    font-weight: 350;
-    line-height: 29px;
-    letter-spacing: 0em;
+    font-family: Segoe UI;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 22px;
+    letter-spacing: 0.02em;
     text-align: left;
+
 }
 
 .send_button {
@@ -82,25 +88,34 @@
     justify-content: center;
     align-items: center;
 
-    max-width: 300px;
-    max-height: 75px;
-    background: #A82F2F;
-    border-radius: 20px;
+    text-align: left;
+
+    width: fit-content;
+
+    padding: 10px 16px;
+
+    border-radius: 12px;
     color: #FFFFFF;
-    text-transform: uppercase;
 
     font-size: 18px;
     font-weight: 700;
     line-height: 34px;
     letter-spacing: 0.015em;
 
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-
     box-shadow: none;
     border: none;
+}
+
+.button_active {
+    background: #EF3124;
+}
+
+.button_inactive {
+    background: #6C6C6C;
+}
+
+.button_inactive:hover {
+    cursor: not-allowed;
 }
 
 .image {
@@ -109,9 +124,41 @@
 }
 
 .file_input_label:hover,
-.send_button:hover {
+.button_active:hover {
     cursor: pointer;
     background-color: lightgrey;
     color: #000000;
     transition-duration: 0.5s;
+}
+
+.file_error_hidden {
+    display: none;
+    color: red;
+    font-family: Segoe UI, serif;
+    font-size: 20px;
+    font-weight: 350;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.file_error_showed {
+    color: red;
+    font-family: Segoe UI, serif;
+    font-size: 20px;
+    font-weight: 350;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.server_error_showed {
+    color: red;
+    font-family: Segoe UI, serif;
+    font-size: 20px;
+    font-weight: 350;
+    letter-spacing: 0em;
+    margin-top: 12px;
+}
+
+.server_error_hidden {
+    display: none;
 }
