--- a/frontend/src/components/Pages/Edit/Edit.module.css
+++ b/frontend/src/components/Pages/Edit/Edit.module.css
@@ -442,3 +442,16 @@
     color: #000000;
     transition-duration: 0.5s;
 }
+
+.server_error_showed {
+    color: red;
+    font-family: Segoe UI, serif;
+    font-size: 20px;
+    font-weight: 350;
+    letter-spacing: 0em;
+    margin-top: 12px;
+}
+
+.server_error_hidden {
+    display: none;
+}
