--- a/frontend/src/components/Pages/Edit/SplitPopup/SplitParametersSetupPopup.module.css
+++ b/frontend/src/components/Pages/Edit/SplitPopup/SplitParametersSetupPopup.module.css
@@ -18,7 +18,7 @@
 
 .content {
     padding: 20px;
-    border-radius: 12px;
+    /*border-radius: 12px;*/
     background-color: white;
     min-height: 400px;
     height: fit-content;
@@ -26,12 +26,29 @@
     width: 550px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     cursor: default;
+
+    font-family: Segoe UI, serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: center;
 }
 
 .header_top {
     align-self: center;
+}
+
+.horizontal_ruler {
+    margin-left: 0;
+    margin-right: 0;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 2px solid #FFB580;
+    padding: 0;
 }
 
 .horizontal_ruler {
@@ -57,12 +74,31 @@
 
 .data_input_element {
     /*white-space: nowrap;*/
-    width: 33%;
+    width: 30%;
     white-space: nowrap;
+    text-align: left;
 }
 
 .data_input_element:disabled {
     background-color: lightgray;
+}
+
+.data_input_block {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.data_input_field {
+    margin-left: 20px;
+    margin-right: 20px;
+    border: 1px solid #B7B7B7;
+    border-radius: 5px;
+    padding-left: 5px;
+}
+
+.data_input_field:disabled {
+    background-color: #B7B7B7;
 }
 
 .example {
@@ -73,4 +109,52 @@
 
 .apply_button {
     cursor: pointer;
+}
+
+.button_block {
+    display: flex;
+    gap: 10px;
+    align-self: center;
+}
+
+.apply_button {
+    background-color: #FFB580;
+    border: none;
+    border-radius: 8px;
+
+    font-family: Segoe UI, serif;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: 0.015em;
+
+    color: #FFFFFF;
+
+    padding: 5px 20px;
+}
+
+.apply_button:hover {
+    cursor: pointer;
+    background-color: #d99b6f;
+}
+
+.cancel_button {
+    background-color: #EA5B5B;
+    border: none;
+    border-radius: 8px;
+
+    font-family: Segoe UI, serif;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: 0.015em;
+
+    color: #FFFFFF;
+
+    padding: 5px 20px;
+}
+
+.cancel_button:hover {
+    cursor: pointer;
+    background-color: #c74c4c;
 }
