--- a/frontend/src/components/Pages/Edit/Edit.module.css
+++ b/frontend/src/components/Pages/Edit/Edit.module.css
@@ -283,8 +283,8 @@
 
 .control_button_connection:hover {
     padding: 0;
-    background: url("connection_dark_bg.png");
-    box-shadow: 0 0 14px 12px #ccc;
+    background: url("connection_light_bg.png");
+    /*box-shadow: 0 0 14px 12px #ccc;*/
     border: none;
     width: 81px;
     height: 81px;
@@ -314,8 +314,8 @@
 
 .control_button_split:hover {
     padding: 0;
-    background: url("split_dark_bg.png");
-    box-shadow: 0 0 14px 12px #ccc;
+    background: url("split_light_bg.png");
+    /*box-shadow: 0 0 14px 12px #ccc;*/
     border: none;
     width: 81px;
     height: 81px;
@@ -345,8 +345,8 @@
 
 .control_button_merge:hover {
     padding: 0;
-    background: url("merge_dark_bg.png");
-    box-shadow: 0 0 14px 12px #ccc;
+    background: url("merge_light_bg.png");
+    /*box-shadow: 0 0 14px 12px #ccc;*/
     border: none;
     width: 81px;
     height: 81px;
@@ -376,7 +376,8 @@
 
 .control_button_delete:hover {
     padding: 0;
-    box-shadow: 0 0 14px 12px #ccc;
+    background: url("delete_light_bg.png");
+    /*box-shadow: 0 0 14px 12px #ccc;*/
     border: none;
     width: 81px;
     height: 81px;
