--- a/frontend/src/components/Pages/EditXlsxToXlsx/EditXlsxToXlsx.module.css
+++ b/frontend/src/components/Pages/EditXlsxToXlsx/EditXlsxToXlsx.module.css
@@ -94,14 +94,16 @@
 }
 
 .struct_block {
+    position: relative;
+
     /*box-shadow:*/
     /*        2px 0 0 0 #888,*/
     /*        0 2px 0 0 #888,*/
     /*        2px 2px 0 0 #888,   !* Just to fix the corner *!*/
     /*        2px 0 0 0 #888 inset,*/
     /*        0 2px 0 0 #888 inset;*/
-    max-width: 165px;
-    width: 165px;
+    /*max-width: 165px;*/
+    /*width: 165px;*/
     /*position: relative;*/
 
     outline: black solid 1px;
