Make workzone local

--- a/frontend/src/components/Pages/EditXlsxToXlsx/EditXlsxToXlsx.module.css
+++ b/frontend/src/components/Pages/EditXlsxToXlsx/EditXlsxToXlsx.module.css
@@ -46,17 +46,21 @@
 }
 
 .scheme_board {
-    width: 60%;
-    min-height: 700px;
-    height: fit-content;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    min-width: 1100px;
+    min-height: 760px;
+    width: 1100px;
+    height: 760px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding-top: 90px;
+    padding-bottom: 60px;
     background-color: #E5E5E5;
     border-radius: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 256px;
+    /*position: relative;*/
 }
 
 .dynamic_arrow_endpoint {
@@ -279,8 +283,8 @@
     padding: 0;
     background: url("connection_dark_bg.png");
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
 }
 
 .control_button_connection:hover {
@@ -288,8 +292,8 @@
     background: url("connection_light_bg.png");
     /*box-shadow: 0 0 14px 12px #ccc;*/
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
     cursor: pointer;
 }
 
@@ -298,8 +302,8 @@
     background: url("connection_light_bg.png");
     box-shadow: 0 0 14px 12px #ccc;
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
 }
 
 .control_button_connection_active:hover {
@@ -310,8 +314,8 @@
     padding: 0;
     background: url("split_dark_bg.png");
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
 }
 
 .control_button_split:hover {
@@ -319,8 +323,8 @@
     background: url("split_light_bg.png");
     /*box-shadow: 0 0 14px 12px #ccc;*/
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
     cursor: pointer;
 }
 
@@ -329,8 +333,8 @@
     background: url("split_light_bg.png");
     box-shadow: 0 0 14px 12px #ccc;
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
 }
 
 .control_button_split_active:hover {
@@ -341,8 +345,8 @@
     padding: 0;
     background: url("merge_dark_bg.png");
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
 }
 
 .control_button_merge:hover {
@@ -350,8 +354,8 @@
     background: url("merge_light_bg.png");
     /*box-shadow: 0 0 14px 12px #ccc;*/
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
     cursor: pointer;
 }
 
@@ -360,8 +364,8 @@
     background: url("merge_light_bg.png");
     box-shadow: 0 0 14px 12px #ccc;
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
 }
 
 .control_button_merge_active:hover {
@@ -372,8 +376,8 @@
     background: url("delete_dark_bg.png");
     padding: 0;
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
 }
 
 .control_button_delete:hover {
@@ -381,8 +385,8 @@
     background: url("delete_light_bg.png");
     /*box-shadow: 0 0 14px 12px #ccc;*/
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
     cursor: pointer;
 }
 
@@ -391,8 +395,8 @@
     background: url("delete_light_bg.png");
     box-shadow: 0 0 14px 12px #ccc;
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
 }
 
 .control_button_delete_active:hover {
@@ -403,16 +407,16 @@
     background: url("reset_dark_bg.png");
     padding: 0;
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
 }
 
 .control_button_reset:hover{
     padding: 0;
     background: url("reset_light_bg.png");
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
     cursor: pointer;
 }
 
@@ -421,8 +425,8 @@
     background: url("reset_light_bg.png");
     box-shadow: 0 0 14px 12px #ccc;
     border: none;
-    width: 81px;
-    height: 81px;
+    min-width: 81px;
+    min-height: 81px;
 }
 
 
