--- a/frontend/src/components/Pages/EditXlsxToXlsx/MergePopup/MergeParametersSetupPopup.module.css
+++ b/frontend/src/components/Pages/EditXlsxToXlsx/MergePopup/MergeParametersSetupPopup.module.css
@@ -1,15 +1,18 @@
 .popup {
-    z-index: 999;
-    height: 100vh;
-    width: 100vw;
+    z-index: 3;
+    width: 1100px;
+    height: 910px;
+    max-width: 1100px;
+    max-height: 910px;
     background-color: rgba(0,0,0,0.4);
-    position: fixed;
-    top: 0;
-    left: 0;
+    position: absolute;
+    top:  672px;
+    left: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    border-radius: 12px;
 }
 
 .hide {
