--- a/frontend/src/components/Footer/Footer.module.css
+++ b/frontend/src/components/Footer/Footer.module.css
@@ -1,3 +1,7 @@
+.container {
+    z-index: 2;
+}
+
 .footer {
     background-color: #000000;
     color: #FFF;
@@ -9,6 +13,14 @@
     line-height: 22px;
     letter-spacing: 0em;
     text-align: left;
+    z-index: 2;
+}
+
+.block {
+    width: 100%;
+    height: 32px;
+    background-color: white;
+    z-index: 2;
 }
 
 .top_section {
