--- a/frontend/src/components/Pages/EditXlsxToXml/EditXlsxToXml.module.css
+++ b/frontend/src/components/Pages/EditXlsxToXml/EditXlsxToXml.module.css
@@ -5,6 +5,13 @@
     flex-direction: column;
 }
 
+.header_container {
+    background-color: white;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+}
+
 .header {
     background: linear-gradient(180deg, rgba(234, 91, 91, 0.8) 0%, rgba(234, 91, 91, 0.128) 100%);
     padding-top: 140px;
@@ -39,10 +46,17 @@
     height: 450px;
 }
 
+.block {
+    width: 100%;
+    height: 32px;
+    background-color: white;
+    z-index: 2;
+}
+
 .edit {
     display: flex;
     gap: 32px;
-    padding: 32px;
+    padding: 0 32px 0;
 }
 
 .scheme_board {
