--- a/frontend/src/components/Pages/EditXlsxToXlsx/EditXlsxToXlsx.module.css
+++ b/frontend/src/components/Pages/EditXlsxToXlsx/EditXlsxToXlsx.module.css
@@ -66,13 +66,13 @@
     height: 760px;
     overflow-y: auto;
     overflow-x: hidden;
-    padding-top: 90px;
-    padding-bottom: 60px;
+    padding-top: 60px;
+    /*padding-bottom: 60px;*/
     background-color: #E5E5E5;
     border-radius: 12px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    /*align-items: center;*/
     gap: 256px;
     /*position: relative;*/
 }
