--- a/frontend/src/components/Pages/EditXlsxToXlsx/SplitPopup/SplitParametersSetupPopup.module.css
+++ b/frontend/src/components/Pages/EditXlsxToXlsx/SplitPopup/SplitParametersSetupPopup.module.css
@@ -1,7 +1,9 @@
 .popup {
     z-index: 3;
     width: 1100px;
-    height: 910px;
+    height: 820px;
+    max-width: 1100px;
+    max-height: 820px;
     background-color: rgba(0,0,0,0.4);
     position: absolute;
     top:  672px;
