--- a/frontend/src/components/Pages/EditXlsxToXlsx/SplitPopup/SplitParametersSetupPopup.module.css
+++ b/frontend/src/components/Pages/EditXlsxToXlsx/SplitPopup/SplitParametersSetupPopup.module.css
@@ -4,9 +4,9 @@
     height: 820px;
     max-width: 1100px;
     max-height: 820px;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
     position: absolute;
-    top:  672px;
+    top: 672px;
     left: 32px;
     display: flex;
     align-items: center;
